# tppss-rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.prompts/: __plan.md
.prompts/A_tasks/: A_Initialization.md
crates/tppss/: Cargo.toml
crates/tppss-cli/: Cargo.toml
crates/tppss-cli/src/: main.rs
crates/tppss/src/: dem.rs  error.rs  horizon.rs  lib.rs  sunpos.rs  tppss.rs  types.rs
crates/tppss/tests/: dem_fixtures.rs
scripts/: sign-built-product.sh
