[package]
name = "tppss"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Topography-aware sunrise and sunset computations"

[features]
default = []
gcs = ["object_store/gcp"]
s3 = ["object_store/aws"]

[dependencies]
async-tiff.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
epsg-utils.workspace = true
futures.workspace = true
ndarray.workspace = true
object_store.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
anyhow.workspace = true
